implemented POST v1/user/login endpoint
